fix: + updated openapi.yml and InboundOrder to reflect changes trigger by work in order-processing-service + removed code smells and mitigated one via detekt.yml (ConstructorParameterNaming in MongoConfig) + fixed testing bug by loading a Kotlin registered version of ObjectMapper
